- Fixing about on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4038,26 +4038,26 @@
 
 @media screen and (max-width: 980px) {
 
-	#contact > .inner {
+	#about > .inner {
 		display: block;
 	}
 
-	#contact > .inner > :nth-child(2n - 1) {
+	#about > .inner > :nth-child(2n - 1) {
 		padding: 4em 0 2em 0 ;
 		border-right: 0;
 		width: 100%;
 	}
 
-	#contact > .inner > :nth-child(2n) {
+	#about > .inner > :nth-child(2n) {
 		padding-left: 0;
 		width: 100%;
 	}
 
-	#contact > .inner > .split > * {
+	#about > .inner > .split > * {
 		padding: 3em 0 1em 0 ;
 	}
 
-	#contact > .inner > .split > :first-child:before {
+	#about > .inner > .split > :first-child:before {
 		display: block;
 	}
 
@@ -4065,7 +4065,7 @@
 
 @media screen and (max-width: 736px) {
 
-	#contact > .inner > :nth-child(2n - 1) {
+	#about > .inner > :nth-child(2n - 1) {
 		padding: 3em 0 1em 0 ;
 	}
 
